Name is changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <!-- Logo -->
             <div class="logo">
-                <a href="#">WellFound</a>
+                <a href="#">CreativeArch</a>
             </div>
 
             <!-- Desktop Navigation -->
