Changes in sturcture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WellFound Navbar Clone</title>
+    <title>Creative Arch</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,36 +12,36 @@
         <div class="navbar">
             <!-- Logo -->
             <div class="logo">
-                <a href="#">CreativeArch</a>
+                <a href="#">Creative Arch</a>
             </div>
 
             <!-- Desktop Navigation -->
             <ul class="nav-links">
+                <li><a href="#">HOME</a></li>
                 <li class="nav-item">
-                    <a href="#">Startups <i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                    <a href="#">PORTFOLIO <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                     <div class="dropdown">
-                        <a href="#">Startup Jobs</a>
-                        <a href="#">Recruiting</a>
-                        <a href="#">Investors</a>
-                        <a href="#">Venture Funds</a>
+                        <a href="#">Residential Building</a>
+                        <a href="#">Commercial Building</a>
+                        <a href="#">Apartments </a>
+                        <a href="#">BECAME A PART OF PORTFOLIO</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Jobs <i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                    <a href="#">BLOGS <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                     <div class="dropdown">
-                        <a href="#">Browse Jobs</a>
-                        <a href="#">Job Collections</a>
-                        <a href="#">Salary Calculator</a>
+                        <a href="#">All Blogs</a>
+                        <a href="#">Construction Insights</a>
+                        <a href="#">Suggest a Blog</a>
                     </div>
                 </li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">AngelList Talent</a></li>
+                <li><a href="#">ABOUT US</a></li>
             </ul>
 
             <!-- Auth Buttons -->
             <div class="auth-buttons">
-                <button class="btn btn-login">Log in</button>
-                <button class="btn btn-signup">Sign up</button>
+                <button class="btn btn-login">Consult with Us</button>
+                <button class="btn btn-signup">Get a Free Quote</button>
             </div>
 
             <!-- Mobile Toggle -->
@@ -54,7 +54,7 @@
         <div class="mobile-menu">
             <ul class="mobile-nav-links">
                 <li class="mobile-nav-item">
-                    <a href="#" class="mobile-dropdown-toggle">Startups <i class="fas fa-chevron-down"></i></a>
+                    <a href="#" class="mobile-dropdown-toggle">Home <i class="fas fa-chevron-down"></i></a>
                     <div class="mobile-dropdown">
                         <a href="#">Startup Jobs</a>
                         <a href="#">Recruiting</a>
@@ -63,7 +63,7 @@
                     </div>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#" class="mobile-dropdown-toggle">Jobs <i class="fas fa-chevron-down"></i></a>
+                    <a href="#" class="mobile-dropdown-toggle">Blogs <i class="fas fa-chevron-down"></i></a>
                     <div class="mobile-dropdown">
                         <a href="#">Browse Jobs</a>
                         <a href="#">Job Collections</a>
@@ -79,6 +79,10 @@
             </div>
         </div>
     </nav>
+
+
+
+
 
     <script src="script.js"></script>
 </body>
