Some minor changes

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <div class="mobile-menu">
             <ul class="mobile-nav-links">
                 <li class="mobile-nav-item">
-                    <a href="#" class="mobile-dropdown-toggle">Home <i class="fas fa-chevron-down"></i></a>
+                    <a href="#" class="mobile-dropdown-toggle">Portfolio <i class="fas fa-chevron-down"></i></a>
                     <div class="mobile-dropdown">
-                        <a href="#">Startup Jobs</a>
-                        <a href="#">Recruiting</a>
-                        <a href="#">Investors</a>
-                        <a href="#">Venture Funds</a>
+                        <a href="#">Residential Building</a>
+                        <a href="#">Commercial Building</a>
+                        <a href="#">Apartments</a>
+                        <a href="#">BECAME A PART OF PORTFOLIO</a>
                     </div>
                 </li>
                 <li class="mobile-nav-item">
@@ -70,12 +70,12 @@
                         <a href="#">Salary Calculator</a>
                     </div>
                 </li>
-                <li class="mobile-nav-item"><a href="#">Blog</a></li>
-                <li class="mobile-nav-item"><a href="#">AngelList Talent</a></li>
+                <li class="mobile-nav-item"><a href="#">About Us</a></li>
+                <li class="mobile-nav-item"><a href="#">WhatsApp Support</a></li>
             </ul>
             <div class="mobile-auth-buttons">
-                <button class="btn btn-login">Log in</button>
-                <button class="btn btn-signup">Sign up</button>
+                <button class="btn btn-login">Consult with Us</button>
+                <button class="btn btn-signup">Get a Free Quote</button>
             </div>
         </div>
     </nav>
