Made change for mobile version

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
             <!-- Auth Buttons -->
             <div class="auth-buttons">
-                <button class="btn btn-login">Consult with Us</button>
-                <button class="btn btn-signup">Get a Free Quote</button>
+                <button class="btn btn-login">Carrier</button>
+                <button class="btn btn-signup">Consult with Us</button>
             </div>
 
             <!-- Mobile Toggle -->
@@ -65,8 +65,8 @@
                 <li class="mobile-nav-item">
                     <a href="#" class="mobile-dropdown-toggle">Blogs <i class="fas fa-chevron-down"></i></a>
                     <div class="mobile-dropdown">
-                        <a href="#">Browse Jobs</a>
-                        <a href="#">Job Collections</a>
+                        <a href="#">All Blogs</a>
+                        <a href="#">Construction Insights</a>
                         <a href="#">Salary Calculator</a>
                     </div>
                 </li>
@@ -74,8 +74,8 @@
                 <li class="mobile-nav-item"><a href="#">WhatsApp Support</a></li>
             </ul>
             <div class="mobile-auth-buttons">
-                <button class="btn btn-login">Consult with Us</button>
-                <button class="btn btn-signup">Get a Free Quote</button>
+                <button class="btn btn-login">Carrier</button>
+                <button class="btn btn-signup">Consult with Us</button>
             </div>
         </div>
     </nav>
