change in mobile version

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div class="mobile-dropdown">
                         <a href="#">All Blogs</a>
                         <a href="#">Construction Insights</a>
-                        <a href="#">Salary Calculator</a>
+                        <a href="#">Suggest a Blog</a>
                     </div>
                 </li>
-                <li class="mobile-nav-item"><a href="#">About Us</a></li>
                 <li class="mobile-nav-item"><a href="#">WhatsApp Support</a></li>
+                <li class="mobile-nav-item"><a href="#">About Us</a></li>
             </ul>
             <div class="mobile-auth-buttons">
                 <button class="btn btn-login">Carrier</button>
