Major changes and included multiple parts

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Arch</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <nav>
         <div class="navbar">
@@ -80,9 +86,55 @@
         </div>
     </nav>
 
-    hi mm
+    <!-- nav batr ends -->
+
+
+<div class="backimg">
+    <div class="home_1con">
+        <div class="leftsection">
+            <video id="HomeVid" src="mediaSource/Navvdo.mp4" autoplay muted loop>
+                something wwent wrong
+            </video>
+        </div>
+        <div class="rightsection">
+            <span class="UpperHeading">
+                Your ideas, our creation
+            </span>
+            <span class="MiddleHaading">
+                <button class="btn btn-login">Our Projects</button>
+                <button class="btn btn-signup">Consult with Us</button>
+            </span>
+            <span class="headingpara">
+                Where visionary architecture meets solid construction. We build spaces
+                that inspire, endure, and elevate the way you live and work.
+            </span>
+        </div>
+    </div>
+</div>
+
+    <!-- <span class="Experiences" style="text-transform: uppercase;">
+        Experiences
+    </span>
+
+    <div class="exppara">
+        <p>
+            At Creative Arch & Consultants, we take immense pride in our journey through the dynamic world of construction. Over the
+            years, we have built not just structures, but long-lasting relationships based on trust, quality, and
+            reliability.
+        </p>
+        <p>
+            With over a decade of hands-on experience, our firm has successfully delivered a wide variety of
+            projects—ranging from residential homes and commercial buildings to large-scale infrastructure developments. Our
+            extensive portfolio reflects our versatility and deep understanding of construction at every level.
+            We believe that every project, regardless of its size or complexity, deserves the highest level of attention and
+            dedication. From concept to completion, our team ensures every detail is executed with precision and
+            professionalism.
+        </p>
+    </div> -->
+
 
 
     <script src="script.js"></script>
 </body>
+
 </html>
