--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    <nav>
+    <!-- Preloader Video Container -->
+    <div id="videoPreloader">
+        <video src="mediaSource/Navvdo.mp4" autoplay muted playsinline id="preloadVideo"></video>
+    </div>
+    
+        <nav>
         <div class="navbar">
             <!-- Logo -->
             <div class="logo">
