preloader error fixing try 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 <body>
     <!-- Preloader Video Container -->
     <div id="videoPreloader">
-        <video src="mediaSource/Navvdo.mp4" autoplay muted playsinline id="preloadVideo"></video>
+        <video 
+        src="mediaSource/Navvdo.mp4" 
+        autoplay 
+        muted 
+        playsinline 
+        preload="auto"
+        id="preloadVideo"
+      ></video>
+      
     </div>
     
         <nav>
@@ -97,8 +105,14 @@
 <div class="backimg">
     <div class="home_1con">
         <div class="leftsection">
-            <video id="HomeVid" src="mediaSource/Navvdo.mp4" autoplay muted loop>
-                something wwent wrong
+            <video 
+              src="mediaSource/Navvdo.mp4" 
+              autoplay 
+              muted 
+              playsinline 
+              loop
+            >
+                something went wrong
             </video>
         </div>
         <div class="rightsection">
