--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 
 <body>
     <!-- Preloader Video Container -->
-    <div id="videoPreloader">
+    <!-- <div id="videoPreloader">
         <video 
         src="mediaSource/Navvdo.mp4" 
         autoplay 
         muted 
         playsinline 
-        preload="auto"
         id="preloadVideo"
-      ></video>
+      ></video> -->
       
     </div>
     
