--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         muted 
         playsinline 
         id="preloadVideo"
-      ></video> -->
+      ></video> 
       
-    </div>
+    </div> -->
     
         <nav>
         <div class="navbar">
